# proxxy

./: Dockerfile  railway.json
backend/: Dockerfile  agent.py  audio_utils.py  call_billing.py  call_service.py  main.py  mobile_agent.py  pyproject.toml  remote_page.py  stt_backend.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: BrowserView.tsx  ChatPanel.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/styles/: globals.css
ios/Proxxy/: ContentView.swift  ProxxyApp.swift
ios/Proxxy.xcodeproj/: project.pbxproj
ios/Proxxy.xcodeproj/project.xcworkspace/xcuserdata/remy.xcuserdatad/: UserInterfaceState.xcuserstate
ios/Proxxy.xcodeproj/xcuserdata/remy.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/Proxxy/Models/: BrowserCommand.swift  Message.swift  Session.swift  Template.swift
ios/Proxxy/Services/: BrowserBridge.swift  CallService.swift  NarrationService.swift  SessionManager.swift  SettingsManager.swift  StorageService.swift  WebSocketService.swift
ios/Proxxy/Views/: BrowserView.swift  CallView.swift  ChatBubble.swift  ChatView.swift  HistoryView.swift  SettingsView.swift  TemplateEditorView.swift  TemplateFillView.swift  TemplateListView.swift  ThinkingDotsView.swift  ToolbarView.swift
